feat: Added popout window
- Added popout window
- Fixed favicon icon
- Improved caching
- Added auto refetch data
- Fixed bug in TimeEntryList

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo32.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redmine Time Tracking</title>
   </head>
-  <body class="w-[320px] h-[500px] mx-auto bg-white dark:bg-gray-800 dark:text-white">
+  <body class="overflow-x-hidden bg-white dark:bg-gray-800 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
