refactor: Design improvements

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redmine Time Tracking</title>
   </head>
-  <body class="overflow-x-hidden bg-white dark:bg-gray-800 dark:text-white">
+  <body class="text-text overflow-x-hidden bg-background">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
